@@ -1,6 +1,15 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+  17 Aug 2002; Daniel Robbins <drobbins@gentoo.org> ebuild.sh: removed 
+  deprecated "ld.so" dependency from Dan Armak's newdepend() function.
+  
+  17 Aug 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: doebuild()
+  running in "depend" mode will set $T to "" to prevent a parent's $T from
+  being inherited; this is important when we run custom portage code from
+  inside an ebuild (such as pkg_postinst)... it allows dep caching to not
+  break.
+
 *portage-2.0.28 (17 Aug 2002)
 
   16 Aug 2002; Daniel Robbins <drobbins@gentoo.org> emerge: return errors when
